# Kufar-Telegram-Notifier

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  kufar-configuration.json
include/: kufar.hpp  networking.hpp  telegram.hpp
src/: helperfunctions.cpp  kufar.cpp  main.cpp  networking.cpp  telegram.cpp
tests/: notifier_tests.cpp
